--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -430,10 +430,24 @@ title = "Mozilla Public License"
 path  = "https://www.mozilla.org/MPL/"
 
 [[resources]] # Path: flare-dependencies.json
-path = "flare-dependencies.json"
+path        = "flare-dependencies.json"
+description = "Dataset used, with flare.json, to show relationships among classes in a software hierarchy."
+
+[[resources.sources]]
+title = "Source undetermined"
+
+[[resources.licenses]]
+name = "License status undetermined"
 
 [[resources]] # Path: flare.json
-path = "flare.json"
+path        = "flare.json"
+description = "Dataset used, with flare-dependencies.json, to show relationships among classes in a software hierarchy."
+
+[[resources.sources]]
+title = "Source undetermined"
+
+[[resources.licenses]]
+name = "License status undetermined"
 
 [[resources]] # Path: flights-10k.json
 path = "flights-10k.json"
