--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -28,11 +28,10 @@ path  = "https://www.7-zip.org/license.txt"
 
 [[resources]] # Path: airports.csv
 path = "airports.csv"
-description = """A comprehensive dataset of airports in the United States and its territories, including 
-major commercial, regional, and municipal airports. The dataset contains information about each airport's
-location (latitude/longitude coordinates), identification codes, name, city, state, and country. The data 
-structure and content is consistent with the airports dataset available on Data.gov, the U.S. government's
-open data site."""
+description = """Airports in the United States and its territories, including  major commercial, regional, 
+and municipal airports. Contains information about each airport's location (latitude/longitude 
+coordinates), identification codes, name, city, state, and country. The data structure and content is 
+consistent with what is available on Data.gov, the U.S. government's open data site."""
 
 [[resources.sources]]
 title = "Airports (Data.gov)"
@@ -58,9 +57,9 @@ path  = "https://www.weather.gov/disclaimer/"
 path = "anscombe.json"
 description = """In his 1973 paper "Graphs in Statistical Analysis," [Yale](https://archives.yale.edu/repositories/12/resources/3711) Professor Francis Anscombe uses these four datasets 
 to argue that visualization is essential to good statistical work, not merely an optional supplement—a radical position at a 
-time when most statistical analysis was done through batch processing on mainframes with no graphical output. The datasets serve 
+time when most statistical analysis was done through batch processing on mainframes with no graphical output. Serves 
 as a powerful demonstration that identical summary statistics can mask radically different patterns in data, making the case that 
-statistical analysis should combine both numerical calculations and graphical examination. Each dataset contains eleven (x,y) pairs 
+statistical analysis should combine both numerical calculations and graphical examination. Contains eleven (x,y) pairs 
 of numbers, with means x̄=9.0 and ȳ=7.5, and identical linear regression lines (same slope and intercept) and correlation coefficients 
 (approximately 0.816)—yet when plotted, they reveal starkly different patterns: one shows a linear relationship, another a 
 non-linear curve, the third a near-perfect linear relationship disrupted by a single outlier, and the fourth a near-vertical 
@@ -79,7 +78,7 @@ name = "License status undetermined"
 [[resources]] # Path: barley.json
 path = "barley.json"
 description = """
-A dataset containing barley variety yields from experiments conducted by the Minnesota Agricultural
+Yields of barley varieties from experiments conducted by the Minnesota Agricultural
 Experiment Station (MAES) across six sites in Minnesota. The USDA Technical Bulletin No. 735
 (December 1940) republished these yields data with explicit credit to MAES as the source.
 
@@ -130,11 +129,10 @@ path  = "https://resources.data.gov/open-licenses/"
 [[resources]] # Path: budgets.json
 path = "budgets.json"
 description = """
-The dataset, sourced from the Office of Management and Budget (OMB) and [analyzed](https://archive.nytimes.com/www.nytimes.com/interactive/2010/02/02/us/politics/20100201-budget-porcupine-graphic.html) by The New York Times in 2010, 
-tracks U.S. federal budget projections and actual outcomes (in trillions of dollars) from 1980 through 2010, with all 
-values adjusted for inflation to the price level at the time of publication. For each budget year, the data includes 
-both the actual budget outcome (looking back one year) and a series of forecasts for future years, allowing comparison 
-between projected and real fiscal results. The data reveals how budget forecasts made in any given year compared to
+U.S. federal budget projections and actual outcomes (in trillions of dollars) from 1980 through 2010, with all 
+values adjusted for inflation to the price level at the time of publication. Originally [analyzed](https://archive.nytimes.com/www.nytimes.com/interactive/2010/02/02/us/politics/20100201-budget-porcupine-graphic.html) by The New York Times in 2010. 
+Includes for each year the actual budget outcome (looking back one year) and a series of forecasts for future years, allowing comparison 
+between projected and real fiscal results. Reveals how budget forecasts made in any given year compared to
 what actually happened, with positive values indicating surpluses (briefly seen around 2000) and negative values 
 representing deficits (reaching a particularly large value of -$1.78 trillion during the 2008-2009 financial crisis)."""
 
@@ -149,21 +147,18 @@ path  = "https://resources.data.gov/open-licenses/"
 [[resources]] # Path: burtin.json
 path = "burtin.json"
 description = """
-The burtin.json dataset is based on graphic designer Will Burtin's 1951 visualization of antibiotic \
-effectiveness, originally published in Scope Magazine.
+compares the performance of three antibiotics against 16 different bacteria. Based on graphic designer 
+Will Burtin's 1951 visualization of antibiotic effectiveness, originally published in Scope Magazine and
+featured as an example in the Protovis project, a precursor to D3.js.
 
-The dataset compares the performance of three antibiotics against 16 different bacteria.
-
-Numerical values in the dataset represent the minimum inhibitory concentration (MIC) of each \
-antibiotic, measured in units per milliliter, with lower values indicating higher antibiotic \
+Numerical values represent the minimum inhibitory concentration (MIC) of each antibiotic, 
+measured in units per milliliter, with lower values indicating higher antibiotic
 effectiveness.
-
-The dataset was featured as an example in the Protovis project, a precursor to D3.js.
 
 As noted in the Protovis example, "Recreating this display revealed some minor errors in the original: \
 a missing grid line at 0.01 μg/ml, and an exaggeration of some values for penicillin".
 
-The vega-datsets version is largely consistent with the Protovis version of the dataset, with one \
+The vega-datsets version is largely consistent with the Protovis version, with one \
 correction (changing 'Brucella antracis' to the correct 'Bacillus anthracis') and the addition of a \
 new column, 'Genus', to group related bacterial species together.
 
@@ -213,14 +208,14 @@ title = "StatLib Datasets Archive"
 path  = "http://lib.stat.cmu.edu/datasets/"
 
 [[resources.licenses]]
-title = "The original dataset was distributed in 1982 for educational and scientific purposes."
+title = "The original was distributed in 1982 for educational and scientific purposes."
 path  = "http://lib.stat.cmu.edu/datasets/cars.desc"
 
 [[resources]] # Path: co2-concentration.csv
 path = "co2-concentration.csv"
 description = """
 Atmospheric CO2 concentration measurements from Mauna Loa Observatory, Hawaii. 
-Dataset contains monthly readings from 1958-2020 with two key measurements:
+Contains monthly readings from 1958-2020 with two key measurements:
 1. CO2 concentrations in millionths of a [mole](https://en.wikipedia.org/wiki/Mole_(unit)) of CO2 
 per mole of air (parts per million), reported on the 2012 
 SIO manometric mole fraction scale
@@ -243,13 +238,12 @@ path  = "https://creativecommons.org/licenses/by/4.0/"
 
 [[resources]] # Path: countries.json
 path = "countries.json"
-description = """This dataset combines key demographic indicators (life expectancy at birth and
-fertility rate measured as babies per woman) for various countries from 1955 to 2000 at 5-year
-intervals. It includes both current values and adjacent time period values (previous and next)
-for each indicator. Gapminder's [data documentation](https://www.gapminder.org/data/documentation/) 
-notes that its philosophy is to fill data gaps with estimates and use current
-geographic boundaries for historical data. Gapminder states that it aims to "show people the
-big picture" rather than support detailed numeric analysis."""
+description = """Key demographic indicators (life expectancy at birth and fertility rate measured 
+as babies per woman) for various countries from 1955 to 2000 at 5-year intervals. Includes both 
+current values and adjacent time period values (previous and next) for each indicator. Gapminder's 
+[data documentation](https://www.gapminder.org/data/documentation/) notes that its philosophy is to fill data gaps with 
+estimates and use current geographic boundaries for historical data. Gapminder states that it 
+aims to "show people the big picture" rather than support detailed numeric analysis."""
 
 [resources.schema]
 [[resources.schema.fields]]
@@ -301,17 +295,15 @@ path  = "https://www.gapminder.org/free-material/"
 [[resources]] # Path: crimea.json
 path = "crimea.json"
 description = """
-This dataset, which informed Florence Nightingale's groundbreaking work in public health, details 
-monthly mortality rates from British military hospitals during the Crimean War (1854-1856). 
-
-Nightingale credits Dr. William Farr for compiling the data from the 1858 [Medical and Surgical 
-History of the British Army](http://resource.nlm.nih.gov/62510370R). The dataset categorizes 
+Monthly mortality rates from British military hospitals during the Crimean War (1854-1856), which informed 
+Florence Nightingale's groundbreaking work in public health. Nightingale credits Dr. William Farr for 
+compiling the data from the 1858 [Medical and Surgical History of the British Army](http://resource.nlm.nih.gov/62510370R). Categorizes 
 deaths into "zymotic" diseases (preventable infectious diseases), wounds/injuries, and other causes. 
-Covering the period from April 1854 to March 1856, the dataset includes monthly army strength 
-alongside mortality figures. Nightingale transformed this data into her now-famous [polar area 
+Covering the period from April 1854 to March 1856, it includes monthly army strength 
+alongside mortality figures. Transformed by Nightingale into her now-famous [polar area 
 diagrams](https://iiif.lib.harvard.edu/manifests/view/drs:7420433$25i). 
 
-The annual mortality rates plotted in the chart can be calculated from the dataset using the formula 
+The annual mortality rates plotted in the chart can be calculated using the formula 
 > (Deaths &times; 1000 &times; 12) &divide; Army Size. 
 
 As [The Lancet](https://pmc.ncbi.nlm.nih.gov/articles/PMC7252134/) argued in 2020, Nightingale's 
@@ -360,11 +352,10 @@ path  = "https://library.harvard.edu/privacy-terms-use-copyright-information#dig
 
 [[resources]] # Path: disasters.csv
 path = "disasters.csv"
-description = """Annual number of deaths from disasters. The data is sourced from EM-DAT (Emergency Events Database) 
+description = """Annual number of deaths from disasters, sourced from EM-DAT (Emergency Events Database) 
 maintained by the Centre for Research on the Epidemiology of Disasters (CRED) at UCLouvain, Belgium. 
-The dataset was processed by Our World in Data, which involved standardizing country names and world region 
-definitions, converting units, calculating derived indicators, and adapting metadata. Deaths are reported 
-as absolute numbers."""
+Processed by Our World in Data to standardize country names and world region definitions, converting units,
+calculating derived indicators, and adapting metadata. Deaths are reported as absolute numbers."""
 
 [[resources.sources]]
 title = "EM-DAT: The Emergency Events Database"
@@ -382,14 +373,14 @@ path  = "https://creativecommons.org/licenses/by/4.0/"
 
 [[resources]] # Path: driving.json
 path = "driving.json"
-description = """This dataset tracks the relationship between driving habits and gasoline prices
-in the United States from 1956 to 2010. It combines two key metrics:
+description = """Tracks the relationship between driving habits and gasoline prices
+in the United States from 1956 to 2010, combining two key metrics:
 
 1. Miles driven per capita per year (ranging from approximately 4,000 to 10,000 miles)
 2. Price of a gallon of gasoline (adjusted for inflation, in regular grade)
 
-The dataset includes a "side" column with values (left, right, top, bottom) that indicates label positioning 
-in the original visualization to optimize readability and prevent overlap. The data spans multiple significant 
+Includes a "side" column with values (left, right, top, bottom) that indicates label positioning 
+in the original visualization to optimize readability and prevent overlap. Spans multiple significant 
 historical periods including the cheap gas era, Arab oil embargo, energy crisis, record low prices, and the
 "swing backward" period from 1956 to 2010.
 """
@@ -404,8 +395,8 @@ name = "License status undetermined"
 [[resources]] # Path: earthquakes.json
 path = "earthquakes.json"
 description = """
-This dataset contains 1,707 worldwide earthquake events recorded by the USGS Earthquake Hazards
-Program from January 31 to February 7, 2018 (UTC). The data represents approximately one week of 
+More than 1,700 worldwide earthquake events recorded by the USGS Earthquake Hazards
+Program from January 31 to February 7, 2018 (UTC). Represents approximately one week of 
 continuous monitoring from USGS's "all earthquakes" real-time feed, which includes seismic 
 events of all magnitudes."""
 
