--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "data",
     "datapackage.json"
   ],
+  "dependencies": {
+    "d3-dsv": "^3.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -35,7 +38,6 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/d3-dsv": "^3.0.7",
-    "d3-dsv": "^3.0.1",
     "datalib": "^1.9.3",
     "release-it": "^18.1.2",
     "rollup": "^4.32.1",
