fix: Use correct heading level in `burtin.json`
Drive-by fix, really been bugging me that this breaks the flow of the navigation

--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -167,7 +167,7 @@ new column, 'Genus', to group related bacterial species together.
 The caption of the original 1951 [visualization](https://graphicdesignarchives.org/wp-content/uploads/wmgda_8616c.jpg) 
 reads as follows:
 
-> ## Antibacterial ranges of Neomycin, Penicillin and Streptomycin
+> #### Antibacterial ranges of Neomycin, Penicillin and Streptomycin
 >
 >
 > The chart compares the in vitro sensitivities to neomycin of some of the common pathogens (gram+ in \
